--- a/Pagina principal/index.html
+++ b/Pagina principal/index.html
@@ -27,6 +27,7 @@
         </div>
       </nav>
 
+      <!-- Hola -->
     <h1 id="tituloPrincipal"></h1>
     <h3></h3>
     <div class="container tenperatureAreaPrincipal">
